Codekit & Compass Projectize

--- a/index.html
+++ b/index.html
@@ -3,8 +3,35 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Transparency</title>
+	<link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
 </head>
 <body>
-	<h1>Transparency Frame At Work</h1>
+	<header>
+		<div class="logo"></div>
+		<h1>Transparency</h1>
+		<h6>Frame At Work</h6>
+	</header>
+	<nav>
+		<ul>
+			<li><a href="">Home</a></li>
+			<li><a href="">Articles</a></li>
+			<li><a href="">Issues</a></li>
+			<li><a href="">Support Us</a></li>
+		</ul>
+	</nav>
+	<div class="headline">
+		<img class="headline" src="" alt="" />
+		<p class="headline"></p>
+	</div>
+	<footer>
+		<p>Transparency</p>
+		<p>Website designed by <a href="http://twitter.com/FRIdSUN">@FRIdSUN</a>. All rights reserved.</p>
+		<ul>
+			<li><a href="">Site Map</a></li>
+			<li><a href="">Contact Us</a></li>
+		</ul>
+	</footer>
 </body>
 </html>
