--- a/index.html
+++ b/index.html
@@ -1,37 +1,53 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-	<meta charset="UTF-8">
-	<title>Transparency</title>
-	<link href="css/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
-  <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+
+  <meta charset="UTF-8">
+
+  <title>CodePen - A Pen by louy2</title>
+
+  <!--
+Copyright (c) 2013 by Lou Yufan (http://codepen.io/louy2/pen/bfKpt)
+
+Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+-->
+
+  <?php
+  $browser = strpos($_SERVER['HTTP_USER_AGENT'],"iPhone");
+    if ($browser == true){
+    $browser = 'iphone';
+  }
+?>
+<?php if($browser == 'iphone'){ ?>
+  <title>Transparency</title>
+<?php }else{ ?>
+  <title>Transparency: Education Revised</title>
+<?php } ?>
+<?php if($browser == 'iphone'){ ?>
+  <meta name="viewport"
+  content="width=device-width,
+  minimum-scale=1.0, maximum-scale=1.0" />
+<?php }else{ ?>
+<meta name="viewport"
+  content="width=device-width,
+  minimum-scale=1.0" />
+<?php } ?>
+
+  <link rel="stylesheet" href="css/style.css" media="screen" type="text/css" />
+
 </head>
+
 <body>
-	<header>
-		<div class="logo"></div>
-		<h1>Transparency</h1>
-		<h6>Frame At Work</h6>
-	</header>
-	<nav>
-		<ul>
-			<li><a href="">Home</a></li>
-			<li><a href="">Articles</a></li>
-			<li><a href="">Issues</a></li>
-			<li><a href="">Support Us</a></li>
-		</ul>
-	</nav>
-	<div class="headline">
-		<img class="headline" src="" alt="" />
-		<p class="headline"></p>
-	</div>
-	<footer>
-		<p>Transparency</p>
-		<p>Website designed by <a href="http://twitter.com/FRIdSUN">@FRIdSUN</a>. All rights reserved.</p>
-		<ul>
-			<li><a href="">Site Map</a></li>
-			<li><a href="">Contact Us</a></li>
-		</ul>
-	</footer>
+
+  <div class="wrapper"><header><img class="site-logo" src="" /><h1 class="site-title en">Transparency</h1><h1 class="site-title cn">明&middot;度</h1></header><nav><ul class="navbar" role="navigation"><li><a href="">Professors</a></li><li><a href="">Articles</a></li><li><a href="">Activities</a></li></ul></nav><div class="headline"><img class="headline-image" src="" /><h2 class="headline-title"></h2><p class="headline-summary"></p></div><section class="professors"><h2 class="section-title">Professors</h2><ul class="professor-list"><li class="professor"><img class="professor-image" src="" /><h2 class="professor-name">Aye</h2><p class="professor-intro">Aye is a good professor</p></li><li class="professor"><img class="professor-image" src="" /><h2 class="professor-name">Bai</h2><p class="professor-intro">Bai is a good professor</p></li><li class="professor"><img class="professor-image" src="" /><h2 class="professor-name">Chi</h2><p class="professor-intro">Chi is a good professor</p></li></ul></section><section class="articles"><h2 class="section-title">Articles</h2><ul class="article-list"><li class="article"><img class="article-cover" src="" /><h3 class="article-title">Apocalypse</h3><p class="article-sum">Apocalypse is a disaster</p></li><li class="article"><img class="article-cover" src="" /><h3 class="article-title">Breaucracy</h3><p class="article-sum">Breaucracy is a disaster</p></li><li class="article"><img class="article-cover" src="" /><h3 class="article-title">Catastrophe</h3><p class="article-sum">Catastrophe is a disaster</p></li></ul></section><section class="activities"><h2 class="section-title">Activities</h2><ul class="activities-list"><li class="activity"><img alt="" class="activity-cover" src="" /><h3 class="activity-title">Get Up!</h3><p class="activity-sum">Fight Disasters</p></li></ul></section><footer><p class="copyright">Designed by <a href="">@FRIdSUN</a>. All rights reserved.</p></footer></div>
+
+  <script src="http:"></script>
+
 </body>
+
 </html>
