--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <nav>
           <ul class="navbar" role="navigation">
             <li>
-              <a href="">Professors</a>
+              <a href="#professors">Professors</a>
             </li>
             <li>
-              <a href="">Articles</a>
+              <a href="#articles">Articles</a>
             </li>
             <li>
-              <a href="">Activities</a>
+              <a href="#activities">Activities</a>
             </li>
           </ul>
         </nav>
@@ -42,7 +42,7 @@
           Professors
         </h2>
         <ul class="professor-list">
-          <li class="professor">
+          <li class="content-block" id="professor">
             <img class="professor-image" src="">
             <h2 class="professor-name">
               Aye
@@ -71,7 +71,7 @@
           </li>
         </ul>
       </section>
-      <section class="articles">
+      <section class="content-block" id="articles">
         <h2 class="section-title">
           Articles
         </h2>
@@ -105,7 +105,7 @@
           </li>
         </ul>
       </section>
-      <section class="activities">
+      <section class="content-block" id="activities">
         <h2 class="section-title">
           Activities
         </h2>
