--- a/poster/index.html
+++ b/poster/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <link href="./style.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet" type="text/css">
   </head>
