--- a/poster/index.html
+++ b/poster/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <link href="./style.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Tangerine" rel="stylesheet" type="text/css">
+    <link href="./style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <header class="poster-title">
@@ -23,8 +23,8 @@
       </h2>
     </section>
     <section class="description">
-      <p class="description-text">
-        古语云：“授人以鱼，不若授人以渔。”学者亦然。今人欲知，不求攧扑众道，只盼书里金屋，实欲速不达之为。考评座次，孰记“争先恐后”？千篇一律，却是“指鹿为马”。难外有难，难不过哥氏异想；错上加错，错不开名利纷繁。
+      <p class="description-text cn">
+        古语云：“授人以鱼，不若授人以渔。”学者亦然。今人欲知，不求攧扑众道，只盼书里金屋，实欲速不达之为。考评座次，孰记“争先恐后”？千篇一律，却是“指鹿为马”。难外有难，难不过哥氏异想；错上加错，错不开钱老诚问。
       </p>
     </section>
   </body>
