More basic styling

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta content="width=device-width, minimum-scale=1.0, maximum-scale=1.0" name="viewport">
+    <meta name="viewport" content="width=device-width">
     <title>
       Transparency
     </title>
@@ -11,13 +11,14 @@
   <body>
     <div class="wrapper">
       <header>
-        <img class="site-logo" src="">
-        <h1 class="site-title en">
-          Transparency
-        </h1>
-        <h1 class="site-title cn">
-          明·度
-        </h1>
+        <div class="site-logo">
+          <h1 class="site-title en">
+            Transparency
+          </h1>
+          <h1 class="site-title cn">
+            明·度
+          </h1>
+        </div>
         <nav>
           <ul class="navbar" role="navigation">
             <li>
