Basic intro + subscription style

--- a/index.html
+++ b/index.html
@@ -9,124 +9,24 @@
     <link href="css/style.css" media="screen" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div class="wrapper">
-      <header>
-        <div class="site-logo">
-          <h1 class="site-title en">
-            Transparency
-          </h1>
-          <h1 class="site-title cn">
-            明·度
-          </h1>
-        </div>
-        <nav>
-          <ul class="navbar" role="navigation">
-            <li>
-              <a href="#professors">Professors</a>
-            </li>
-            <li>
-              <a href="#articles">Articles</a>
-            </li>
-            <li>
-              <a href="#activities">Activities</a>
-            </li>
-          </ul>
-        </nav>
-      </header>
-      <div class="headline">
-        <img class="headline-image" src="">
-        <h2 class="headline-title"></h2>
-        <p class="headline-summary"></p>
+    <header>
+      <div class="site-logo">
+        <h1 class="site-title en">
+          Transparency
+        </h1>
+        <h1 class="site-title cn">
+          明·度
+        </h1>
       </div>
-      <section class="professors">
-        <h2 class="section-title">
-          Professors
-        </h2>
-        <ul class="professor-list">
-          <li class="content-block" id="professor">
-            <img class="professor-image" src="">
-            <h2 class="professor-name">
-              Aye
-            </h2>
-            <p class="professor-intro">
-              Aye is a good professor
-            </p>
-          </li>
-          <li class="professor">
-            <img class="professor-image" src="">
-            <h2 class="professor-name">
-              Bai
-            </h2>
-            <p class="professor-intro">
-              Bai is a good professor
-            </p>
-          </li>
-          <li class="professor">
-            <img class="professor-image" src="">
-            <h2 class="professor-name">
-              Chi
-            </h2>
-            <p class="professor-intro">
-              Chi is a good professor
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="content-block" id="articles">
-        <h2 class="section-title">
-          Articles
-        </h2>
-        <ul class="article-list">
-          <li class="article">
-            <img class="article-cover" src="">
-            <h3 class="article-title">
-              Apocalypse
-            </h3>
-            <p class="article-sum">
-              Apocalypse is a disaster
-            </p>
-          </li>
-          <li class="article">
-            <img class="article-cover" src="">
-            <h3 class="article-title">
-              Breaucracy
-            </h3>
-            <p class="article-sum">
-              Breaucracy is a disaster
-            </p>
-          </li>
-          <li class="article">
-            <img class="article-cover" src="">
-            <h3 class="article-title">
-              Catastrophe
-            </h3>
-            <p class="article-sum">
-              Catastrophe is a disaster
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="content-block" id="activities">
-        <h2 class="section-title">
-          Activities
-        </h2>
-        <ul class="activities-list">
-          <li class="activity">
-            <img alt="" class="activity-cover" src="">
-            <h3 class="activity-title">
-              Get Up!
-            </h3>
-            <p class="activity-sum">
-              Fight Disasters
-            </p>
-          </li>
-        </ul>
-      </section>
-      <footer>
-        <p class="copyright">
-          Designed by <a href="">@FRIdSUN</a>. All rights reserved.
-        </p>
-      </footer>
-    </div>
+      <div class="emfield">
+        <h3>
+          Please enter your email to subscribe to latest updates.
+        </h3>
+        <form action="" method="post">
+          <input type="text" name="email">
+          <input type="submit" value="OK">
+        </form>
+      </div>
+    </header>
   </body>
 </html>
