--- a/index.html
+++ b/index.html
@@ -1,32 +1,120 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta name="viewport" content="width=device-width">
+    <meta name="author" content="Lou Yufan @ RPI">
+    <meta name="description" content="Transparency is a student-created magazine focused on basic social science matters.">
+    <meta name="keywords" content="student, society, culture, science, ethics, magazine">
     <title>
-      Transparency
+      Transp  arency
     </title>
-    <link href="css/style.css" media="screen" rel="stylesheet" type="text/css">
+    <!-- Le styles -->
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
+    body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+    }
+    </style>
+    <link href="css/bootstrap-responsive.css" rel="stylesheet" type="text/css">
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="js/html5shiv.js"></script>
+    <![endif]-->
+    <!-- Fav and touch icons -->
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
+    <link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
+    <link rel="shortcut icon" href="ico/favicon.png">
   </head>
   <body>
-    <header>
-      <div class="site-logo">
-        <h1 class="site-title en">
+    <div class="navbar navbar-inverse navbar-fixed-top">
+      <div class="navbar-inner">
+        <div class="container">
+          <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse"></button> <a class="brand" href="#">Transparency</a>
+          <div class="nav-collapse collapse">
+            <ul class="nav pull-right">
+              <li class="active">
+                <a href="#">Home</a>
+              </li>
+              <!-- Disable nav
+              <li>
+                <a href="#about">About</a>
+              </li>
+              <li>
+                <a href="#contact">Contact</a>
+              </li>
+              -->
+              <!-- Disable Dropdown
+              <li class="dropdown">
+                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Subscribe</a>
+                <ul class="dropdown-menu">
+                  <li>
+                    <a href="#">Email</a>
+                  </li>
+                  <li>
+                    <a href="#">WeChat</a>
+                  </li>
+                  <li>
+                    <a href="#">Something else here</a>
+                  </li>
+                  <li class="nav-header">Nav header
+                  </li>
+                  <li>
+                    <a href="#">Separated link</a>
+                  </li>
+                  <li>
+                    <a href="#">One more separated link</a>
+                  </li>
+                </ul>
+              </li>
+              -->
+            </ul>
+            <!-- Disable Form
+            <form class="navbar-form pull-right">
+              <input class="span2" type="text" placeholder="Email"> <input class="span2" type="password" placeholder="Password"> <button type="submit" class="btn">Sign in</button>
+            </form>
+            -->
+          </div><!--/.nav-collapse -->
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <!-- Main hero unit for a primary marketing message or call to action -->
+      <div class="hero-unit">
+        <h1>
           Transparency
         </h1>
-        <h1 class="site-title cn">
-          明·度
-        </h1>
+        <hr>
+        <p>
+          Transparency is a magazine focused on giving high school students some insights into popular social matters. 
+        </p>
+      </div><!-- Example row of columns -->
+      <div class="row">
+        <div class="media span6">
+          <img class="media-object pull-left" src="img/qrcode_for_gh_24d91d672bf6_258.jpg" alt="">
+          <h2 class="media-heading">
+            WeChat QRCode
+          </h2>
+          <p>
+            Please scan the QRCode to get the latest updates on the magazine from your WeChat app.
+          </p>
+        </div>
       </div>
-      <div class="emfield">
-        <h3>
-          Please enter your email to subscribe to latest updates.
-        </h3>
-        <form action="" method="post">
-          <input type="text" name="email">
-          <input type="submit" value="OK">
-        </form>
-      </div>
-    </header>
+      <hr>
+      <footer>
+        <p>
+          © Company 2013
+        </p>
+      </footer>
+    </div><!-- /container -->
+    <!-- Le javascript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- Load jQuery -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+    <script src="js/bootstrap.js" type="text/javascript"></script>
   </body>
 </html>
